--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        
-        <!-- Lien vers le fichier CSS de Bootstrap -->
-        <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet">
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}HealthApp{% endblock %}</title>
+    
+    <!-- Lien vers le fichier CSS de Bootstrap -->
+    <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet">
 
-        {% block stylesheets %}
-        {% endblock %}
+    {# Lien vers ton propre fichier CSS #}
+    <link href="{{ asset('css/style.css') }}" rel="stylesheet">
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
+    {% block stylesheets %}{% endblock %}
+</head>
+<body>
+    <div class="container">
         {% block body %}{% endblock %}
+    </div>
 
-        <!-- Lien vers le fichier JS de Bootstrap -->
-        <script src="{{ asset('js/bootstrap.bundle.min.js') }}"></script>
-    </body>
+    <!-- Lien vers le fichier JS de Bootstrap -->
+    <script src="{{ asset('js/bootstrap.bundle.min.js') }}"></script>
+
+    {# Lien vers ton propre fichier JavaScript #}
+    <script src="{{ asset('js/script.js') }}"></script>
+
+    {% block javascripts %}
+        {% block importmap %}{{ importmap('app') }}{% endblock %}
+    {% endblock %}
+</body>
 </html>
